--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -21,8 +21,8 @@ mixin image(value)
 
           //- img.core-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline loading="auto")
         picture
-          img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline loading="auto" width="50w")
-        noscript Javascript is necesscary for an amazing experience.
+          img.placeholder-img(src!=`${_src}.webp?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline loading="auto" width="50w")
+        noscript Javascript is necesscary for this site awesome experience.
           img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="100vw")
     .layer-image-overlay
 
