--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -6,11 +6,11 @@ mixin hero(value, banner)
   - let _image = _value.img;
 
   section.layer
-    article.layout-padding-bottom.layout-padding-dull-top(class=`${!banner ? "layout-contain-large layout-padding-horz-small" : ''}`)
+    article.layout-padding-bottom.layout-padding-dull-top(class=`${!banner ? "layout-contain-enlarge layout-padding-horz-small" : ''}`)
       .layer-hero(class=`${!banner ? "header-top-spot" : 'banner-mode'}`)
         +image(_image)
 
-        section.layout-enlarge.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-resize-desktop
+        section.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-gigantic--device-desktop.layout-enlarge-vert
           .layer-content.style-center
             section.layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder= _title
