--- a/views/app.pug
+++ b/views/app.pug
@@ -146,7 +146,9 @@ html(lang="en")
         span(itemprop='author') Joseph Ojo
           div(itemscope='' itemtype='https://schema.org/Person')
             img(itemprop='image' src='https://www.josephojo.com/android-icon-192x192.png' alt='The logo for josephojo.com')
-            span(itemprop="email") laoluojo@gmail.com
+            span(itemprop="email") laoluojo
+              span &#64;
+              span gmail.com
             span(itemprop='description')
               | The porfolio of Joseph, it contains all amazing projects etc...
             span(itemtype='https://schema.org/EducationalOrganization' itemprop="alumniOf")
