--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -2,22 +2,23 @@ include ./content.pug
 
 mixin hero(value, banner)
   - let _value = value || { img: {}, title: "Title", };
+  - let _content = _value.content;
   - let _title = _value.title;
   - let _image = _value.img;
 
   section.layer
-    article.layout-padding-bottom.layout-padding-dull-top(class=`${!banner ? "layout-contain-enlarge layout-padding-horz-small" : ''}`)
+    article.layout-padding-bottom.layout-padding-dull-top(class=`${!banner ? "layout-contain-larger layout-padding-horz-small" : ''}`)
       .layer-hero(class=`${!banner ? "header-top-spot" : 'banner-mode'}`)
         +image(_image)
 
-        section.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-gigantic--device-desktop.layout-enlarge-vert
-          .layer-content.style-center
+        section.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-huge--device-laptop.layout-padding-vert-huge--device-desktop.layout-enlarge-vert
+          .layer-content.layout-contain
             section.layer-header
-              h1.style-font-title.layer-title.style-white.style-font-weight-bolder= _title
+              h1.style-font-title.layer-title.style-white.style-font-weight-bolder!= _title
             section.layer-main
-
-            section.layer-footer.layout-align-self-end
-              a.btn.layer-round.layout-padding-small.layer-tertiary.layer-shadow.layer-secondary-hover.layer-tertiary-dark-focus.style-secondary.style-hover-tertiary.layer-hero-scroll-down
+              h3.style-font-family-bold.style-font-weight-300.style-white.layer-main-text!= _content
+            section.layout-align-self-end
+              a.layer-footer.btn.layer-round.layout-padding-small.layer-tertiary.layer-shadow.layer-secondary-hover.layer-tertiary-dark-focus.style-secondary.style-hover-tertiary.layer-hero-scroll-down
                 span.btn-group
-                  i.icon.style-font-sz-36(inline) expand_more
+                  i.icon.style-font-sz-24--device-phone.style-font-sz-36(inline) expand_more
 
