--- a/views/app.pug
+++ b/views/app.pug
@@ -5,9 +5,9 @@ html(lang="en")
     meta(http-equiv='X-UA-Compatible' content='IE=edge,chrome=1')
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
-    meta(http-equiv='Cache-Control' content='public, s-max-age=31536000')
+    meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     meta(http-equiv='Content-Security-Policy' content=`default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/ https://www.josephojo.com/; 
-    script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' ${dev ? "* blob: ws:" : ""}; upgrade-insecure-requests`)
+    script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self'${dev ? " * blob: ws:" : ""}; upgrade-insecure-requests; base-uri 'self';`)
 
     meta(name='robots' content='all')
     meta(name='title' content=page.title)
@@ -19,6 +19,7 @@ html(lang="en")
     meta(name='keywords' content='Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, website, netlify')
 
     meta(property='og:type' content='website')
+    meta(property='og:image' content=`https://www.josephojo.com/android-icon-192x192.png`)
     meta(property='article:author' content='Joseph Ojo')
     meta(property='og:site_name' content='josephojo.com')
     meta(property='og:title' content=`${page.title} - josephojo.com`)
