--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -123,8 +123,8 @@ img {
 
     &-show {
         // filter: blur(0px) !important;
-        opacity: 0 !important;
-        z-index: 0 !important;
+        opacity: 0;
+        z-index: 0;
     }
 }
 
