--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -32,7 +32,7 @@
             }
 
             .navbar-title-line {
-                border-left-color: darken($background, 14%) !important;
+                border-left-color: darken($background, 14%);
             }
         }
 
@@ -132,7 +132,7 @@
                 &:before {
                     transition: transform .25s cubic-bezier(.25, .46, .45, .94);
                     transform: translateY($height - 14px) scaleX(0);
-                    background-color: $primary !important;
+                    background-color: $primary;
                     border: 1.5px solid transparent;
                     transform-origin: 100% 50%;
                     will-change: transform;
@@ -152,8 +152,8 @@
                 color: $black;
 
                 .navbar-link-content:before {
-                    transform: translateY($height - 14px) scaleX(1) !important;
-                    transform-origin: 0 50% !important;
+                    transform: translateY($height - 14px) scaleX(1) ;
+                    transform-origin: 0 50%;
                 }
             }
 
@@ -260,7 +260,7 @@
                 &:focus,
                 &:hover {
                     .navbar-link-content:before {
-                        transform: translateY($height - 18px) scaleX(1) !important;
+                        transform: translateY($height - 18px) scaleX(1) ;
                     }
                 }
             }
@@ -270,7 +270,7 @@
             }
 
             &-desktop {
-                display: none !important;
+                display: none;
             }
 
             &-mobile {
