--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -88,6 +88,7 @@
 
         .layer-image {
             img {
+                transform: scale(1.2);
                 min-width: 500px;
             }
 
@@ -102,8 +103,12 @@
             position: relative;
             z-index: 250;
 
+            @media #{$screen-size-tablet} {
+                margin-bottom: -276px;
+            }
+
             @media (min-width: #{$tablet}px) {
-                margin-bottom: -286px;
+                margin-bottom: -270px;
             }
         }
 
