--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -7,17 +7,12 @@ mixin image(value)
     .load-img
       .img-contain
         picture
-          source(media='(max-width: 500px)' srcset!=`${_src}.webp?w=500&quality=70` sizes="(max-width: 500px) 500w" type='image/webp')
-          source(media='(max-width: 500px)' srcset!=`${_src}.jpg?w=500&quality=70` sizes="(max-width: 500px) 500w" type='image/jpeg')
+          each n in [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
+            source(media=`(max-width: ${n}00px)` srcset!=`${_src}.webp?w=${n}00&quality=${n <= 8 ? 70 : 100}` sizes=`(max-width: ${n}00px) ${n}00w` type='image/webp')
+            source(media=`(max-width: ${n}00px)` srcset!=`${_src}.jpg?w=${n}00&quality=${n <= 8 ? 70 : 100}` sizes=`(max-width: ${n}00px) ${n}00w` type='image/jpeg')
 
-          source(media='(max-width: 700px)' srcset!=`${_src}.webp?w=700` sizes="(max-width: 700px) 700w" type='image/webp')
-          source(media='(max-width: 700px)' srcset!=`${_src}.jpg?w=700` sizes="(max-width: 700px) 700w" type='image/jpeg')
-
-          source(media='(max-width: 900px)' srcset!=`${_src}.webp?w=900` sizes="(max-width: 900px) 900w" type='image/webp')
-          source(media='(max-width: 900px)' srcset!=`${_src}.jpg?w=900` sizes="(max-width: 900px) 900w" type='image/jpeg')
-
-          source(media='(min-width: 900px)' srcset!=`${_src}.webp` sizes="100vw" type='image/webp')
-          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" sizes="(max-width: 500px) 500w,(max-width: 700px) 700w,(max-width: 900px) 900w, 100vw" width="100vw")
+          source(media='(min-width: 1600px)' srcset!=`${_src}.webp` sizes="100vmax" type='image/webp')
+          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" sizes="(max-width: 500px) 500w,(max-width: 700px) 700w,(max-width: 900px) 900w, 100vmax" width="100vmax")
 
           //- img.core-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline loading="auto")
         picture
