--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -11,7 +11,7 @@ mixin hero(value, banner)
       .layer-hero(class=`${!banner ? "header-top-spot" : 'banner-mode'}`)
         +image(_image)
 
-        section.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-huge--device-laptop.layout-padding-vert-huge--device-desktop.layout-enlarge-vert
+        section.layout-padding-horz-sub-large--device-phone.layout-padding-horz-sub-large--device-tablet.layout-padding-horz-sub-large--device-laptop.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-enlarge-vert.layout-padding-vert-huge--device-tablet.layout-padding-vert-huge--device-laptop.layout-padding-vert-huge--device-desktop
           .layer-content.layout-contain
             section.layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder!= _title
