--- a/views/app.pug
+++ b/views/app.pug
@@ -56,6 +56,8 @@ html(lang="en")
     link(rel='icon', type='image/png', sizes='32x32', href='/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
+    link(rel='shortcut icon', href='/favicon.ico', type='image/x-icon')
+    link(rel='icon', href='/favicon.ico', type='image/x-icon')
     link(rel='manifest', href='manifest.webmanifest')
     link(rel='home', href='https://www.josephojo.com/')
 
