--- a/views/app.pug
+++ b/views/app.pug
@@ -72,7 +72,6 @@ html(lang="en")
     link(rel="prefetch" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin)
 
     link(rel='stylesheet' href='./css/app.min.css' inline async)
-    script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now%2CIntersectionObserver' crossorigin async)
 
       //- link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin)
     //- link(rel="preload" href='./css/app.min.css' as="style" async)
@@ -161,7 +160,7 @@ html(lang="en")
       //- dev
       //- Navbar etc...
       +header(page)
-
+      
       mixin sectionView(section)
         if typeof section == "object"
           +section(section)
@@ -231,6 +230,7 @@ html(lang="en")
               h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON
               h5.style-white.style-line-height.style-capital.layer-content-detail This website is currently in development. We are working day and night to have it in tip top shape.
 
+    script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' crossorigin async)
     script(src=`${debug ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline async)
     if false
       script(src=`./js/store.min.js` inline defer)
