--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -11,14 +11,17 @@ mixin hero(value, banner)
       .layer-hero(class=`${!banner ? "header-top-spot" : 'banner-mode'}`)
         +image(_image)
 
-        section.layout-padding-horz-sub-large--device-phone.layout-padding-horz-sub-large--device-tablet.layout-padding-horz-sub-large--device-laptop.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-enlarge-vert.layout-padding-vert-huge--device-tablet.layout-padding-vert-huge--device-laptop.layout-padding-vert-huge--device-desktop
+        section.layout-padding-horz-sub-large--device-phone.layout-padding-horz-sub-large--device-tablet.layout-padding-horz-sub-large--device-laptop.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-large--device-phone.layout-padding-vert-huge--device-tablet.layout-padding-vert-huge--device-laptop.layout-padding-vert-huge--device-desktop
           .layer-content.layout-contain
             section.layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder!= _title
             section.layer-main
               h3.style-font-family-bold.style-font-weight-300.style-white.layer-main-text!= _content
             section.layout-align-self-end
-              a.layer-footer.btn.layer-round.layout-padding-small.layer-tertiary.layer-shadow.layer-secondary-hover.layer-tertiary-dark-focus.style-secondary.style-hover-tertiary.layer-hero-scroll-down
+              a.layer-footer.btn.layer-round.layout-padding-horz-small.layout-padding-vert-smallest.layer-primary-dark.layer-shadow.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.layer-hero-scroll-down
                 span.btn-group
-                  i.icon.style-font-sz-24--device-phone.style-font-sz-36(inline) expand_more
+                  i.icon.style-font-sz-24(inline) expand_more
+                  span.btn-section
+                    span.btn-spacer
+                    span.btn-content Scroll Down
 
