--- a/views/app.pug
+++ b/views/app.pug
@@ -2,12 +2,11 @@ doctype html
 html(lang="en")
   head
     meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible' content='IE=edge,chrome=1')
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(http-equiv='Cache-Control' content='public, max-age=31536000')
     meta(http-equiv='Content-Security-Policy' content=`default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/ https://www.josephojo.com/ https://josephojo.netlify.com/; 
-    script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self'${dev ? " * blob: ws:" : ""}; upgrade-insecure-requests; base-uri 'self' https://josephojo.netlify.com/ https://www.josephojo.com/;`)
+    script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src data: 'self' https://fonts.gstatic.com/ https://res.cloudinary.com/${cloud_name}/ https://polyfill.io/ https://cdnjs.cloudflare.com/${dev ? " * blob: ws:" : ""}; upgrade-insecure-requests; base-uri 'self' https://josephojo.netlify.com/ https://www.josephojo.com/;`)
 
     meta(name='robots' content='all')
     meta(name='title' content=page.title)
@@ -34,7 +33,6 @@ html(lang="en")
 
     link(rel='preconnect' href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
     link(rel='preconnect' href='https://fonts.gstatic.com/' crossorigin)
-    link(rel='preconnect' href='https://cdnjs.cloudflare.com/' crossorigin)
     link(rel='preconnect' href='https://polyfill.io/' crossorigin)
 
     link(rel='apple-touch-icon', sizes='57x57', href='/apple-icon-57x57.png')
@@ -53,6 +51,7 @@ html(lang="en")
 
     link(rel='icon', type='image/png', sizes='512x512', href='/android-icon-512x512.png')
     link(rel='icon', type='image/png', sizes='192x192', href='/android-icon-192x192.png')
+    link(rel='icon', type='image/png', sizes='144x144', href='/android-icon-144x144.png')
     link(rel='icon', type='image/png', sizes='32x32', href='/favicon-32x32.png')
     link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
@@ -77,6 +76,10 @@ html(lang="en")
     //- link(rel="preload" href='./css/app.min.css' as="style" async)
     //- link(rel="prefetch" href='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' as="script" crossorigin)
     //- link(rel="preload" href='./js/app.modern.min.js' as="script")
+
+    <!--[if lt IE 10]>
+      link(rel='preconnect' href='https://cdnjs.cloudflare.com/' crossorigin)
+    <![endif]-->
 
     <!--[if lt IE 9]>
       script(src='https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js' async)
@@ -205,14 +208,14 @@ html(lang="en")
           .layout-flex.layout-padding-horz
             section.layout-spacer
             section.layer-primary-dark.layer-shadow.layer-round
-              button.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary
+              button.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
                 span.btn-group
                   i.icon.style-font-sz-24(inline) expand_less
                   span.btn-section
                     span.btn-spacer
                     span.btn-content Back To Top
 
-                button.copyright-btn.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary
+                button.copyright-btn.btn.btn-hover.layer-round.layout-padding-horz-smallest.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
                   span.btn-group.style-font-sz-24
                     i.icon(inline) copyright
                     span.btn-section
