Change secondary dark to a lighter color

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -40,7 +40,7 @@
 $primary: #4500ff;
 $primary-dark: #2d22ca;
 $secondary: #ff0266;
-$secondary-dark: #a50041;
+$secondary-dark: #dc0057;
 $tertiary: #ffde03;
 $tertiary-dark: #e5c702;
 $background: #f5f8fc;
